Add meta for robots and src for images

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Best product for men">
     <meta name="keywords" content="potention, manpower, libido">
-    <meta name="robots" content="none">
+    <meta name="robots" content="all">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Baloo+2:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous">
@@ -42,15 +42,15 @@
             <div class="container">
                 <div class="my-slider">
                     <div>
-                        <img alt="sad man by the table" class="tns-lazy-img" data-src="./dist/images/slider1.jpg">
+                        <img alt="sad man by the table" class="tns-lazy-img" data-src="./dist/images/slider1.jpg" src="#">
                         <p class="slide-description">Are you tired of being powerless?</p>
                     </div>
                     <div>
-                        <img alt="sad man by the wall" class="tns-lazy-img" data-src="./dist/images/slider2.jpg">
+                        <img alt="sad man by the wall" class="tns-lazy-img" data-src="./dist/images/slider2.jpg" src="#">
                         <p class="slide-description">Losing the joy of life?</p>
                     </div>
                     <div>
-                        <img alt="sad old man by the laptop" class="tns-lazy-img" data-src="./dist/images/slider3.jpg">
+                        <img alt="sad old man by the laptop" class="tns-lazy-img" data-src="./dist/images/slider3.jpg" src="#">
                         <p class="slide-description">Problems with sex?</p>
                     </div>
                 </div>
