--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +23,7 @@
     <!-- Header start -->
     <header class="header">
         <div class="header__overlay">
-            <video class="header__video" autoplay loop muted>
+            <video class="header__video" autoplay loop muted webkit-playsinline playsinline>
                 <source src="./dist/images/header-bg/couple.webm" type="video/webm">
                 <source src="./dist/images/header-bg/couple.mp4" type="video/mp4">
                 <source src="./dist/images/header-bg/couple.ogv" type="video/ogg">
