--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                         </div> -->
                         <div class="countdown-number">
                           <span class="hours countdown-time"></span>
-                          <span class="countdown-text">:</span>
+                          <span class="countdown-text"></span>
                         </div>
                         <div class="countdown-number">
                           <span class="minutes countdown-time"></span>
-                          <span class="countdown-text">:</span>
+                          <span class="countdown-text"></span>
                         </div>
                         <div class="countdown-number">
                           <span class="seconds countdown-time"></span>
